# torch-datasets

./: CMakeLists.txt  README.md  TODO  test.lua
dataset/: SimpleDataset.lua  TableDataset.lua  bsr500.lua  cifar10.lua  cmnist.lua  coil.lua  house_numbers.lua  imageset.lua  init.lua  lushio.lua  mnist.lua  pipeline.lua  smallnorb.lua  table_dataset.lua  test-linscale01.lua  util.lua  videoset.lua  whitening.lua
test/: coil_examples.lua  mnist_examples.lua  runner.lua  test_coil.lua  test_pipeline.lua  test_table_dataset.lua
